<package>
  <name>dual_manipulation_ik_control</name>
  <version>0.8.4</version>
  <description>
     Dual Manipulation Inverse Kinematic control with Trajectory Generator
  </description>
  <maintainer email="ale.settimi@gmail.com">Alessandro Settimi</maintainer>
  <license>BSD</license>

  <author>Alessandro Settimi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
</package>
